--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -163,6 +163,20 @@ form button:hover {
     margin-bottom: 10px;
 }
 
+.button a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+  
+.button a:hover {
+    background-color: #0056b3;
+}
+
   
 /* Footer-styling */
 footer {
