--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: rgb(255, 204, 211);
 }
   
 /* Styling för header och navigationsbar */
@@ -14,6 +15,10 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
+}
+
+h1, h2, h3 {
+    text-align: center;
 }
 
 nav {
@@ -52,14 +57,15 @@ body {
 
 /* Instruktionstext */
 .instruction {
-    color: rgb(54, 68, 178);
-    text-align: center;
+    color: black;
+    align-items: center;
+    margin: center;
 }
 
 .cupcake-tower {
     display: block;
     margin: 20px auto;
-    max-width: 200px;
+    max-width: 400px;
     height: auto;
 }
 
@@ -124,7 +130,7 @@ form button:hover {
 /* Styling för produkterna */
 .container {
     display: grid;
-    grid-template-columns: (2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin: 20px;
   }
@@ -163,14 +169,14 @@ form button:hover {
     display: inline-block;
     margin-top: 10px;
     padding: 10px;
-    background-color: #007bff;
-    color: white;
+    background-color: rgb(255, 142, 157);
+    color: black;
     text-decoration: none;
     border-radius: 5px;
 }
 
 .product a:hover {
-    background-color: #0056b3;
+    background-color: rgb(255, 204, 211);
 }
 
 /* Styling för kundvagnen */
