--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -97,7 +97,8 @@ body {
 }
 
 /* Grundläggande styling för alla formulär */
-form {
+form#loginform,
+form#registerform {
     width: 300px;
     margin: 50px auto;
     padding: 20px;
@@ -218,18 +219,12 @@ form button:hover {
     box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.1);
 }
 
-.cart h1 {
-    text-align: center;
-    margin-top: 60px;
-    margin-bottom: 30px;
-    color: #d6336c;
-}
-
 .cart p {
     margin: 25px 0;
     padding-bottom: 20px;
     border-bottom: 1px solid #eee;
     line-height: 1.5;
+    font-weight: bold;
 }
 
 .cart p:last-of-type {
@@ -238,11 +233,10 @@ form button:hover {
 
 .cart p strong {
     font-size: 1.2em;
-    color: #d35b85;
+    color: rgb(255, 142, 157);
 }
 
-/* Knapp till checkout */
-.button {
+.cart .button {
     display: inline-block;
     margin-top: 20px;
     padding: 14px 28px;
@@ -256,7 +250,7 @@ form button:hover {
     transition: background-color 0.3s, transform 0.2s;
 }
 
-.button:hover {
+.cart .button:hover {
     background-color: rgb(255, 204, 211);
     transform: scale(1.35);
 }
@@ -266,7 +260,88 @@ form button:hover {
     width: fit-content;
     margin: 30px auto 0;
 }
-  
+
+/* Checkout/pay styling */
+.summary {
+    max-width: 600px;
+    margin: 50px auto 50px;
+    padding: 35px;
+    background-color: #fff;
+    font-size: 1.1em;
+    color: #333;
+    border-radius: 18px;
+    box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.1);
+}
+
+.summary p {
+    margin: 25px 0;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #eee;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
+.summary p:last-of-type {
+    border-bottom: none;
+}
+
+.summary p strong {
+    font-size: 1.5em;
+    color: rgb(255, 142, 157);
+    text-decoration: underline #333;
+}
+
+.summary .button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 24px;
+    background-color: rgb(255, 142, 157);
+    color: black;
+    text-decoration: none;
+    border-radius: 8px;
+    margin-left: 0;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    font-weight: bold;
+    font-size: 1.2rem;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.summary .button:hover {
+    background-color: rgb(255, 204, 211);
+    transform: scale(1.03);
+}
+
+.summary a.button {
+    display: block;
+    width: fit-content;
+    margin: 30px auto 0;
+}
+
+.button.return {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: rgb(255, 142, 157);
+    color: black;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.button.return:hover {
+    background-color: rgb(255, 204, 211);
+    transform: scale(1.05);
+}
+
+.button.return {
+    display: block;
+    width: fit-content;
+    margin: 30px auto 0;
+}
+
 /* Footer-styling */
 footer {
     background-color: #333;
