--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -193,18 +193,57 @@ form button:hover {
     color: #333;
 }
 
-.product a {
-    display: inline-block;
+.add-cart-form {
     margin-top: 10px;
-    padding: 10px;
+}
+
+.add-cart-form input[type="number"] {
+    width: 60px;
+    padding: 5px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.add-cart-form .button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 8px 12px;
+    width: auto;
     background-color: rgb(255, 142, 157);
     color: black;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 8px;
+    margin-left: 0;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    font-weight: bold;
+    font-size: 1.2rem;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
-.product a:hover {
+.add-cart-form .button:hover{
     background-color: rgb(255, 204, 211);
+    transform: scale(1.03);
+}
+
+.add-cart-form a.button {
+    display: block;
+    width: fit-content;
+    margin: 30px auto 0;
+}
+
+.add-cart-form label,
+.add-cart-form input[type="number"] {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.add-cart-form input[type="number"] {
+    width: 30px;
+    padding: 8px 12px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border: 1px solid #33333383;
 }
 
 /* Styling för kundvagnen */
@@ -239,7 +278,7 @@ form button:hover {
 .cart .button {
     display: inline-block;
     margin-top: 20px;
-    padding: 14px 28px;
+    padding: 12px 24px;
     background-color: rgb(255, 142, 157);
     color: black;
     text-decoration: none;
@@ -247,18 +286,29 @@ form button:hover {
     margin-left: 0;
     box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     font-weight: bold;
+    font-size: 1.2rem;
     transition: background-color 0.3s, transform 0.2s;
 }
 
 .cart .button:hover {
     background-color: rgb(255, 204, 211);
-    transform: scale(1.35);
+    transform: scale(1.03);
 }
 
 .cart a.button {
     display: block;
     width: fit-content;
     margin: 30px auto 0;
+}
+
+input#customMessage {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    width: 80%;
+    font-size: 1.2em;
+    margin: 10px auto;
+    display: block;
 }
 
 /* Checkout/pay styling */
