--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -79,7 +79,7 @@ body {
     padding-top: 50px;
 }
 
-/* Instruktionstext */
+/* Första sidan */
 .instruction {
     padding: 50px;
     display: flex;
