--- a/Gesällprov/style.css
+++ b/Gesällprov/style.css
@@ -280,10 +280,10 @@ form button:hover {
 }
 
 .cart p {
-    margin: 25px 0;
+    margin: 15px;
     padding-bottom: 20px;
     border-bottom: 1px solid #eee;
-    line-height: 1.5;
+    line-height: 0.5;
     font-weight: bold;
 }
 
@@ -330,6 +330,26 @@ input#customMessage {
     font-size: 1.2em;
     margin: 10px auto;
     display: block;
+}
+
+/* Styling för "Remove"-knappen */
+.cart .remove-button {
+    background-color: rgb(255, 142, 157);
+    color: black;
+    padding: 5px 10px;
+    font-size: 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: auto;
+    text-align: center;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.cart .remove-button:hover {
+    background-color: rgb(255, 204, 211);
+    transform: scale(1.3);
+    font-weight: bold;
 }
 
 /* Checkout/pay styling */
